# QRCodeGenPy

./: .env.example  .gitignore  002.bat  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  PYPI_SETUP_COMPLETE.md  QRCodeGenerator.py  README.md  SCRIPT_ORGANIZATION_COMPLETE.md  activate.bat  activate.sh  fix_pip_false_positive.py  install_deps.sh  pyproject.toml  pytest.ini  requirements.txt  run_coverage.bat  run_main.sh  run_security_audit.py  run_streamlit.bat  run_streamlit.sh  run_tests.py  security_override.txt  setup.py  setup_env.bat  setup_env.sh  streamlit_app.py
.github/workflows/: ci.yml
qrcodegenpy_shankonduru/: __init__.py  cli.py  qr_generator.py
scripts/: README.md
scripts/unix/: run_coverage.sh  run_security_audit.sh  run_tests.sh  upload_pypi.sh
scripts/windows/: install_deps.bat  run_main.bat  run_security_audit.bat  run_tests.bat  upload_pypi.bat  upload_pypi_safe.bat
security_reports/: pip_audit_report.json  security_summary.md
tests/: __init__.py  test_main_function.py  test_qr_code_generator.py
